--- a/package.json
+++ b/package.json
@@ -7,14 +7,19 @@
     "node": "18"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "semistandard --fix --verbose yafssg src/*.js src/cmds/*.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "config": "^3.3.8",
+    "date-fns": "^2.29.3",
+    "feed": "^4.2.2",
     "glob": "^8.0.3",
-    "handlebars": "^4.7.7"
+    "handlebars": "^4.7.7",
+    "marked": "^4.2.2",
+    "nanoid": "^3.3.4",
+    "terminal-kit": "^3.0.0"
   },
   "devDependencies": {
     "semistandard": "^16.0.1"
